derive_tests/tests/compile_fail/nested_no_struct.rs
use validify::Validify;

#[derive(Validify)]
struct Test {
    #[modify(trim, uppercase)]
    s: String,
    #[modify(nested)]
    a: String,
}

fn main() {}
