derive_tests/tests/compile_fail/nested_no_struct.stderr
error: Unrecognized modify parameter
 --> tests/compile_fail/nested_no_struct.rs:7:14
  |
7 |     #[modify(nested)]
  |              ^^^^^^
